--- a/jrbaselibrary/src/main/AndroidManifest.xml
+++ b/jrbaselibrary/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jereibaselibrary">
+    <!--网络权限-->
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
