--- a/jrbaselibrary/build.gradle
+++ b/jrbaselibrary/build.gradle
@@ -42,10 +42,14 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okio:okio:1.7.0'
     //解析JSON
-    compile 'com.sh.shjsonutils:shjson:1.0.7'
+//    compile 'com.sh.shjsonutils:shjson:1.0.7'
     //okhttp3
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'org.jsoup:jsoup:1.9.2'
+    //retrofit2
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 
 
 }
