--- a/jr_ui_library/build.gradle
+++ b/jr_ui_library/build.gradle
@@ -22,19 +22,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-
     //google 官方兼容控件
-//    recyclerview
-//    compile 'com.android.support:recyclerview-v7:24.2.1'
+    //    recyclerview
+    //    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     //数量提示小红点  和拖动
     compile 'com.zsh.code:dragindicator:2.0.1'
     //时间选择器
     compile 'com.bigkoo:pickerview:2.1.1'
+    compile files('libs/pinyin4j-2.5.0.jar')
 }
