--- a/jr_ui_library/build.gradle
+++ b/jr_ui_library/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     //数量提示小红点  和拖动
     compile 'com.zsh.code:dragindicator:2.0.1'
     //时间选择器
-    compile 'com.bigkoo:pickerview:2.1.1'
+    compile 'com.sh.zsh.code:pickerview:2.1.2'
     compile files('libs/pinyin4j-2.5.0.jar')
 }
