--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.MainActivity" />
         <activity android:name=".ui.UserListActivity" />
-        <activity android:name=".ui.LetterListViewActivity" />
+        <activity android:name=".ui.LetterListViewActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".ui.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.LoginActivity"></activity>
-        <activity android:name=".ui.SettingActivity"></activity>
+        <activity android:name=".ui.SettingActivity"
+            ></activity>
     </application>
 
 </manifest>
