--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.MainActivity" />
         <activity android:name=".ui.UserListActivity" />
-        <activity android:name=".ui.LetterListViewActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".ui.LetterListViewActivity"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,9 +21,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.LoginActivity"></activity>
-        <activity android:name=".ui.SettingActivity"
-            ></activity>
+        <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".ui.SettingActivity" />
+        <activity android:name=".ui.TabLayoutActivity" />
+        <activity android:name=".ui.TabLayout2Activity"></activity>
+        <activity android:name=".ui.VideoRecordDemoActivity"></activity>
+        <activity android:name=".ui.VideoActivity"  android:configChanges="orientation|keyboardHidden|screenSize"></activity>
+
     </application>
+
 
 </manifest>
