--- a/jr_func_library/src/main/AndroidManifest.xml
+++ b/jr_func_library/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity android:name="com.jrfunclibrary.bootpage.BootActivity"></activity>
+
+        <!-- 图像页面 -->
+        <activity
+            android:name="com.jrfunclibrary.activity.ImageViewPageActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
