--- a/jrbaselibrary/build.gradle
+++ b/jrbaselibrary/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     //图片
     compile 'com.github.bumptech.glide:glide:3.7.0'
     //解析JSON
-    compile 'com.sh.zsh.code:shjson:1.1.2'
+    compile 'com.sh.zsh.code:shjson:1.2.2'
     //okhttp3
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'org.jsoup:jsoup:1.9.2'
@@ -45,6 +45,21 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
-
+//下载
+    compile 'com.liulishuo.filedownloader:library:0.1.2'
 
 }
+//apply plugin: 'com.github.dcendents.android-maven'
+//task javadoc(type: Javadoc) {
+//    source = android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//
+//}
+//task javadocJar(type: Jar, dependsOn: javadoc) {
+//    classifier = 'javadoc'
+//    from javadoc.destinationDir
+//}
+////解决编码问题
+//tasks.withType(Javadoc) {
+//    options.encoding = "UTF-8"
+//}
