修改一堆东西

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+    // dataBinding 加入
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -35,5 +39,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
-    //    compile 'com.sh.zsh.code:JrImLibrary:1.0.2'
+    compile 'com.sh.zsh.code:JrImLibrary:2.0.4'
 }
