--- a/jrbaselibrary/build.gradle
+++ b/jrbaselibrary/build.gradle
@@ -11,7 +11,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+//        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -24,6 +24,7 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -47,7 +48,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 //下载
     compile 'com.liulishuo.filedownloader:library:0.1.2'
-
+    compile 'com.android.support:multidex:1.0.0'
 }
 //apply plugin: 'com.github.dcendents.android-maven'
 //task javadoc(type: Javadoc) {
