添加音频播放

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity
             android:name=".ui.ShVideoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-        <activity android:name=".ui.LayerListViewActivity"></activity>
+        <activity android:name=".ui.LayerListViewActivity" />
+        <activity android:name=".ui.AudioRecordActivity"></activity>
     </application>
 
 </manifest>
