--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,16 +34,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(path: ':jrbaselibrary')
-    compile project(path: ':jr_ui_library')
-    compile project(path: ':jr_func_library')
+
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
-//    compile 'com.sh.zsh.code:JrImLibrary:2.0.4'
+    compile 'com.sh.zsh.code:JrImLibrary:2.0.4'
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+
     compile project(path: ':umeng_sdk')
+    compile project(path: ':jrbaselibrary')
+    compile project(path: ':jr_ui_library')
+    compile project(path: ':jr_func_library')
 }
