--- a/jrbaselibrary/build.gradle
+++ b/jrbaselibrary/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     //下载
-    compile 'com.liulishuo.filedownloader:library:0.1.2'
+ //   compile 'com.liulishuo.filedownloader:library:0.1.2'
     compile 'com.android.support:multidex:1.0.0'
     compile files('libs/volley.jar')
 }
