--- a/tu/json/constant.gradle
+++ b/tu/json/constant.gradle
@@ -2,5 +2,6 @@ ext{
     MIN_SDK_VERSION =15
     TARGET_SDK_VERSION =22
     COMPILE_SDK_VERSION =25
+    BUILD_TOOLS_VERSION ="25.0.0"
     COM_ANDROID_TOOLS_BUILD_VERSION = 'com.android.tools.build:gradle:2.3.2'
 }
