--- a/tu/json/constant.gradle
+++ b/tu/json/constant.gradle
@@ -5,3 +5,24 @@ ext{
     BUILD_TOOLS_VERSION ="25.0.0"
     COM_ANDROID_TOOLS_BUILD_VERSION = 'com.android.tools.build:gradle:2.3.2'
 }
+buildscript {
+    repositories {
+       maven{url='http://mvn.jerei.com/nexus/content/groups/public/'}
+    }
+    dependencies {
+//        println COM_ANDROID_TOOLS_BUILD_VERSION
+
+        classpath 'com.android.tools.build:gradle:2.3.2'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+allprojects {
+    repositories {
+      maven{url='http://mvn.jerei.com/nexus/content/groups/public/'}
+    }
+}
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
