--- a/tu/json/constant.gradle
+++ b/tu/json/constant.gradle
@@ -7,7 +7,7 @@ ext{
     ANDROID_SUPPORT_V7='com.android.support:appcompat-v7:25.0.0-alpha1'
     ANDROID_SUPPORT_V4='com.android.support:support-v4:25.0.0-alpha1'
     ANDROID_SUPPORT_DESIGN='com.android.support:design:26.0.0-alpha1'
-    SUPPORT_VERSON='25.0.0-alpha1'
+    SUPPORT_VERSON='25.0.0'
 }
 
 task clean(type: Delete) {
