--- a/tu/json/constant.gradle
+++ b/tu/json/constant.gradle
@@ -8,6 +8,55 @@ ext{
     ANDROID_SUPPORT_V4='com.android.support:support-v4:25.0.0-alpha1'
     ANDROID_SUPPORT_DESIGN='com.android.support:design:26.0.0-alpha1'
     SUPPORT_VERSON='25.0.0'
+    
+           println "       quu..__\n" +
+                    "         \$\$\$b  `---.__\n" +
+                    "          \"\$\$bb        `--.                          ___.---uuudP\n" +
+                    "           `\$\$b           `.__.------.__     __.---'      \$\$\$\$\"              .\n" +
+                    "             \"\$b          -'            `-.-'            \$\$\$\"              .'|\n" +
+                    "               \".                                       d\$\"             _.'  |\n" +
+                    "                 `.   /                              ...\"             .'     |\n" +
+                    "                   `./                           ..::-'            _.'       |\n" +
+                    "                    /                         .:::-'            .-'         .'\n" +
+                    "                   :                          ::''\\          _.'            |\n" +
+                    "                  .' .-.             .-.           `.      .'               |\n" +
+                    "                  : /'\$\$|           .@\"\$\\           `.   .'              _.-'\n" +
+                    "                 .'|\$u\$\$|          |\$\$,\$\$|           |  <            _.-'\n" +
+                    "                 | `:\$\$:'          :\$\$\$\$\$:           `.  `.       .-'\n" +
+                    "                 :                  `\"--'             |    `-.     \\\n" +
+                    "                :##.       ==             .###.       `.      `.    `\\\n" +
+                    "                |##:                      :###:        |        >     >\n" +
+                    "                |#'     `..'`..'          `###'        x:      /     /\n" +
+                    "                 \\                                   xXX|     /    ./\n" +
+                    "                  \\                                xXXX'|    /   ./\n" +
+                    "                  /`-.                                  `.  /   /\n" +
+                    "                 :    `-  ...........,                   | /  .'\n" +
+                    "                 |         ``:::::::'       .            |<    `.\n" +
+                    "                 |             ```          |           x| \\ `.:``.\n" +
+                    "                 |                         .'    /'   xXX|  `:`M`M':.\n" +
+                    "                 |    |                    ;    /:'  xXXX|  - MMMMM: \n" +
+                    "                 `.  .'                   :    /:'       |-'MMMM.-'\n" +
+                    "                  |  |                   .'   /'        .'MMM.-'\n" +
+                    "                  `'`'                   :  ,'          |MMM<\n" +
+                    "                    |                     `'            |tbap\\\n" +
+                    "                     \\                                  :MM.-'\n" +
+                    "                      \\                 |              .''\n" +
+                    "                       \\.               `.            /\n" +
+                    "                        /     .:::::::.. :           /\n" +
+                    "                       |     .:::::::::::`.         /\n" +
+                    "                       |   .:::------------\\       /\n" +
+                    "                      /   .''               >::'  /\n" +
+                    "                      `',:                 :    .'\n" +
+                    "                                           `:.:'\n"+
+                    " 如有问题请联系qq 405086805   辉儿可爱多       \n" +
+                    " E-mail zhush@jerei.com                                   \n" +
+                    " Blog http://zhush.xyz/   独角兽之路                             \n" +
+                    " github https://github.com/hui46226021                              \n" +
+                    " 注意代码规范                                         \n"+
+                    " 注意代码规范                                         \n"+
+                    " 注意代码规范                                         \n"+
+                    "                                         \n"+
+                    "                                       \n"
 }
 
 task clean(type: Delete) {
