--- a/tu/json/constant.gradle
+++ b/tu/json/constant.gradle
@@ -62,3 +62,7 @@ ext{
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+def releaseTime() {
+    return new Date().format("yyyy-MM-dd", TimeZone.getTimeZone("UTC"))
+}
